--- a/NOVA/Views/IsEmri/Is.cshtml
+++ b/NOVA/Views/IsEmri/Is.cshtml
@@ -28,6 +28,14 @@
     <link rel="stylesheet" href="https://lipis.github.io/bootstrap-sweetalert/lib/sweet-alert.css">
 
     <style>
+        #test td:nth-of-type(1) {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-left: 0;
+        }
+
         .container-fluid{
             padding:0 !important;
         }
